OSGeo4W/apps/grass/grass-6.4.2RC2/etc/python/grass/lib/g3d.py


struct_G3D_Map.__slots__ = [
    'fileName',
    'tempName',
    'mapset',
    'operation',
    'region',
    'window',
    'resampleFun',
    'unit',
    'tileX',
    'tileY',
    'tileZ',
    'nx',
    'ny',
    'nz',
    'data_fd',
    'type',
    'precision',
    'compression',
    'useLzw',
    'useRle',
    'useXdr',
    'offset',
    'indexOffset',
    'indexLongNbytes',
    'indexNbytesUsed',
    'fileEndPtr',
    'hasIndex',
    'index',
    'tileLength',
    'typeIntern',
    'data',
    'currentIndex',
    'useCache',
    'cache',
    'cacheFD',
    'cacheFileName',
    'cachePosLast',
    'range',
    'numLengthExtern',
    'numLengthIntern',
    'clipX',
    'clipY',
    'clipZ',
    'tileXY',
    'tileSize',
    'nxy',
    'nTiles',
    'useMask',
]
struct_G3D_Map._fields_ = [
    ('fileName', String),
    ('tempName', String),
    ('mapset', String),
    ('operation', c_int),
    ('region', G3D_Region),
    ('window', G3D_Region),
    ('resampleFun', POINTER(resample_fn)),
    ('unit', String),
    ('tileX', c_int),
    ('tileY', c_int),
    ('tileZ', c_int),
    ('nx', c_int),
    ('ny', c_int),
    ('nz', c_int),
    ('data_fd', c_int),
    ('type', c_int),
    ('precision', c_int),
    ('compression', c_int),
    ('useLzw', c_int),
    ('useRle', c_int),
    ('useXdr', c_int),
    ('offset', c_int),
    ('indexOffset', c_long),
    ('indexLongNbytes', c_int),
    ('indexNbytesUsed', c_int),
    ('fileEndPtr', c_int),
    ('hasIndex', c_int),
    ('index', POINTER(c_long)),
    ('tileLength', POINTER(c_int)),
    ('typeIntern', c_int),
    ('data', String),
    ('currentIndex', c_int),
    ('useCache', c_int),
    ('cache', POINTER(None)),
    ('cacheFD', c_int),
    ('cacheFileName', String),
    ('cachePosLast', c_long),
    ('range', struct_FPRange),
    ('numLengthExtern', c_int),
    ('numLengthIntern', c_int),
    ('clipX', c_int),
    ('clipY', c_int),
    ('clipZ', c_int),
    ('tileXY', c_int),
    ('tileSize', c_int),
    ('nxy', c_int),
    ('nTiles', c_int),
    ('useMask', c_int),
]

G3D_Map = struct_G3D_Map # c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 184

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 219
class struct_anon_9(Structure):
    pass

struct_anon_9.__slots__ = [
    'elts',
    'nofElts',
    'eltSize',
    'names',
    'locks',
    'autoLock',
    'nofUnlocked',
    'minUnlocked',
    'next',
    'prev',
    'first',
    'last',
    'eltRemoveFun',
    'eltRemoveFunData',
    'eltLoadFun',
    'eltLoadFunData',
    'hash',
]
struct_anon_9._fields_ = [
    ('elts', String),
    ('nofElts', c_int),
    ('eltSize', c_int),
    ('names', POINTER(c_int)),
    ('locks', String),
    ('autoLock', c_int),
    ('nofUnlocked', c_int),
    ('minUnlocked', c_int),
    ('next', POINTER(c_int)),
    ('prev', POINTER(c_int)),
    ('first', c_int),
    ('last', c_int),
    ('eltRemoveFun', CFUNCTYPE(UNCHECKED(c_int), )),
    ('eltRemoveFunData', POINTER(None)),
    ('eltLoadFun', CFUNCTYPE(UNCHECKED(c_int), )),
    ('eltLoadFunData', POINTER(None)),
    ('hash', POINTER(None)),
]

G3D_cache = struct_anon_9 # c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 219

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 233
class struct_anon_10(Structure):
    pass

struct_anon_10.__slots__ = [
    'nofNames',
    'index',
    'active',
    'lastName',
    'lastIndex',
    'lastIndexActive',
]
struct_anon_10._fields_ = [
    ('nofNames', c_int),
    ('index', POINTER(c_int)),
    ('active', String),
    ('lastName', c_int),
    ('lastIndex', c_int),
    ('lastIndexActive', c_int),
]

G3d_cache_hash = struct_anon_10 # c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 233

write_fn = CFUNCTYPE(UNCHECKED(c_int), c_int, POINTER(None), POINTER(None)) # c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 237

read_fn = CFUNCTYPE(UNCHECKED(c_int), c_int, POINTER(None), POINTER(None)) # c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 238

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 243
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_cache_reset'):
    G3d_cache_reset = _libs['grass_g3d.6.4.2RC2'].G3d_cache_reset
    G3d_cache_reset.restype = None
    G3d_cache_reset.argtypes = [POINTER(G3D_cache)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 244
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_cache_dispose'):
    G3d_cache_dispose = _libs['grass_g3d.6.4.2RC2'].G3d_cache_dispose
    G3d_cache_dispose.restype = None
    G3d_cache_dispose.argtypes = [POINTER(G3D_cache)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 245
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_cache_new'):
    G3d_cache_new = _libs['grass_g3d.6.4.2RC2'].G3d_cache_new
    G3d_cache_new.restype = POINTER(None)
    G3d_cache_new.argtypes = [c_int, c_int, c_int, POINTER(write_fn), POINTER(None), POINTER(read_fn), POINTER(None)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 246
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_cache_set_removeFun'):
    G3d_cache_set_removeFun = _libs['grass_g3d.6.4.2RC2'].G3d_cache_set_removeFun
    G3d_cache_set_removeFun.restype = None
    G3d_cache_set_removeFun.argtypes = [POINTER(G3D_cache), POINTER(write_fn), POINTER(None)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 247
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_cache_set_loadFun'):
    G3d_cache_set_loadFun = _libs['grass_g3d.6.4.2RC2'].G3d_cache_set_loadFun
    G3d_cache_set_loadFun.restype = None
    G3d_cache_set_loadFun.argtypes = [POINTER(G3D_cache), POINTER(read_fn), POINTER(None)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 248
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_cache_new_read'):
    G3d_cache_new_read = _libs['grass_g3d.6.4.2RC2'].G3d_cache_new_read
    G3d_cache_new_read.restype = POINTER(None)
    G3d_cache_new_read.argtypes = [c_int, c_int, c_int, POINTER(read_fn), POINTER(None)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 249
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_cache_lock'):
    G3d_cache_lock = _libs['grass_g3d.6.4.2RC2'].G3d_cache_lock
    G3d_cache_lock.restype = c_int
    G3d_cache_lock.argtypes = [POINTER(G3D_cache), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 250
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_cache_lock_intern'):
    G3d_cache_lock_intern = _libs['grass_g3d.6.4.2RC2'].G3d_cache_lock_intern
    G3d_cache_lock_intern.restype = None
    G3d_cache_lock_intern.argtypes = [POINTER(G3D_cache), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 251
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_cache_unlock'):
    G3d_cache_unlock = _libs['grass_g3d.6.4.2RC2'].G3d_cache_unlock
    G3d_cache_unlock.restype = c_int
    G3d_cache_unlock.argtypes = [POINTER(G3D_cache), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 252
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_cache_unlock_all'):
    G3d_cache_unlock_all = _libs['grass_g3d.6.4.2RC2'].G3d_cache_unlock_all
    G3d_cache_unlock_all.restype = c_int
    G3d_cache_unlock_all.argtypes = [POINTER(G3D_cache)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 253
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_cache_lock_all'):
    G3d_cache_lock_all = _libs['grass_g3d.6.4.2RC2'].G3d_cache_lock_all
    G3d_cache_lock_all.restype = c_int
    G3d_cache_lock_all.argtypes = [POINTER(G3D_cache)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 254
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_cache_autolock_on'):
    G3d_cache_autolock_on = _libs['grass_g3d.6.4.2RC2'].G3d_cache_autolock_on
    G3d_cache_autolock_on.restype = None
    G3d_cache_autolock_on.argtypes = [POINTER(G3D_cache)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 255
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_cache_autolock_off'):
    G3d_cache_autolock_off = _libs['grass_g3d.6.4.2RC2'].G3d_cache_autolock_off
    G3d_cache_autolock_off.restype = None
    G3d_cache_autolock_off.argtypes = [POINTER(G3D_cache)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 256
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_cache_set_minUnlock'):
    G3d_cache_set_minUnlock = _libs['grass_g3d.6.4.2RC2'].G3d_cache_set_minUnlock
    G3d_cache_set_minUnlock.restype = None
    G3d_cache_set_minUnlock.argtypes = [POINTER(G3D_cache), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 257
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_cache_remove_elt'):
    G3d_cache_remove_elt = _libs['grass_g3d.6.4.2RC2'].G3d_cache_remove_elt
    G3d_cache_remove_elt.restype = c_int
    G3d_cache_remove_elt.argtypes = [POINTER(G3D_cache), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 258
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_cache_flush'):
    G3d_cache_flush = _libs['grass_g3d.6.4.2RC2'].G3d_cache_flush
    G3d_cache_flush.restype = c_int
    G3d_cache_flush.argtypes = [POINTER(G3D_cache), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 259
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_cache_remove_all'):
    G3d_cache_remove_all = _libs['grass_g3d.6.4.2RC2'].G3d_cache_remove_all
    G3d_cache_remove_all.restype = c_int
    G3d_cache_remove_all.argtypes = [POINTER(G3D_cache)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 260
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_cache_flush_all'):
    G3d_cache_flush_all = _libs['grass_g3d.6.4.2RC2'].G3d_cache_flush_all
    G3d_cache_flush_all.restype = c_int
    G3d_cache_flush_all.argtypes = [POINTER(G3D_cache)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 261
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_cache_elt_ptr'):
    G3d_cache_elt_ptr = _libs['grass_g3d.6.4.2RC2'].G3d_cache_elt_ptr
    G3d_cache_elt_ptr.restype = POINTER(None)
    G3d_cache_elt_ptr.argtypes = [POINTER(G3D_cache), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 262
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_cache_load'):
    G3d_cache_load = _libs['grass_g3d.6.4.2RC2'].G3d_cache_load
    G3d_cache_load.restype = c_int
    G3d_cache_load.argtypes = [POINTER(G3D_cache), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 263
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_cache_get_elt'):
    G3d_cache_get_elt = _libs['grass_g3d.6.4.2RC2'].G3d_cache_get_elt
    G3d_cache_get_elt.restype = c_int
    G3d_cache_get_elt.argtypes = [POINTER(G3D_cache), c_int, POINTER(None)]
